# approxum

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: curves.rs  sampling.rs  simd.rs  simplify.rs  spatial.rs
examples/: generate_gallery.rs  visualize.rs
src/: bridge.rs  error.rs  lib.rs
src/bounds/: aabb.rs  capsule.rs  circle.rs  mod.rs  obb.rs
src/curves/: arc.rs  bezier.rs  bspline.rs  catmull_rom.rs  fit.rs  hermite.rs  intersect.rs  mod.rs  nurbs.rs  offset.rs
src/distance/: mod.rs  sdf.rs  transform.rs
src/hull/: mod.rs
src/io/: mod.rs  svg.rs
src/polygon/: boolean.rs  clip.rs  core.rs  decompose.rs  minkowski.rs  mod.rs  offset.rs  skeleton.rs  stroke.rs  triangulate.rs  validate.rs  visibility.rs
src/primitives/: affine2.rs  circle2.rs  ellipse2.rs  line2.rs  mod.rs  point2.rs  point3.rs  ray2.rs  segment2.rs  segment3.rs  vec2.rs  vec3.rs
src/sampling/: halton.rs  mod.rs  poisson.rs  sobol.rs
src/simd/: bezier.rs  distance.rs  mod.rs  point.rs
src/simplify/: mod.rs  radial.rs  rdp.rs  topology.rs  visvalingam.rs
src/spatial/: bvh.rs  kdtree.rs  mod.rs
src/tolerance/: frechet.rs  hausdorff.rs  mod.rs  predicates.rs  weld.rs
src/triangulation/: delaunay.rs  mod.rs  voronoi.rs
