[package]
name = "approxum"
version = "0.1.0"
edition = "2021"
description = "A Rust library for geometric approximation algorithms"
license = "Apache-2.0"

[dependencies]
num-traits = "0.2"
thiserror = "1.0"

[features]
default = []
simd = ["wide"]
serde = ["dep:serde"]

[dependencies.wide]
version = "0.7"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
approx = "0.5"
